# mgatk2

./: .gitignore  LICENSE  Makefile  README.md  cellranger_workflow.md  pyproject.toml
.github/workflows/: ci.yml  conda-build.yml
R/: README.md  mgatk2_functions.R  mgatk2_qc_plots.R  mgatk2_vignette.Rmd  plot_variant_coverage.R
conda-recipe/: meta.yaml
data/: mito_variants.vcf
src/: __init__.py
src/analysis/: __init__.py  qc.py  report.py
src/cli/: __init__.py  base.py  options.py  utils.py
src/cli/commands/: __init__.py  call.py  mask.py  run.py  tenx.py  test.py
src/core/: __init__.py  config.py  exceptions.py  pipeline.py
src/data/: __init__.py
src/data/blacklists/: README.md  __init__.py
src/data/references/: __init__.py  hg19_MT.fasta  hg38_MT.fasta  mm10_MT.fasta  mm9_MT.fasta
src/file_io/: __init__.py  barcode_extraction.py  formats.py  main.py  writers.py
src/processing/: __init__.py  pileup.py  processors.py  readers.py
src/utils/: __init__.py  genome_utils.py  masking.py  utils.py
tests/: README.md
tests/outs/: possorted_bam.bam.bai
tests/outs/filtered_peak_bc_matrix/: barcodes.tsv
tests/run_hdf5_output/: mgatk2_report.html
tests/run_hdf5_output/output/: counts.h5  metadata.h5
tests/run_hdf5_output/qc/: cell_stats.csv  summary.txt
tests/run_output/: mgatk2_report.html
tests/run_output/output/: counts.h5  metadata.h5
tests/run_output/qc/: cell_stats.csv  summary.txt
tests/run_txt_output/output/: chrM_refAllele.txt  output.depthTable.txt
tests/run_txt_output/qc/: cell_stats.csv  summary.txt
tests/tenx_output/output/: chrM_refAllele.txt  depthTable.txt  output.depthTable.txt
tests/tenx_output/qc/: cell_stats.csv  summary.txt
